[package]
name = "chan-rs"
version = "0.10.6"
edition = "2021"
description = "Efficiently Interact with an LSP process"
license-file = "LICENSE-GPL"

[lib]
path= "src/lsp/lsp.rs"
doctest= false
[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
lsp-types = "0.97.0"
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
tokio = { version = "1.38.1", features = ["full"] }
